Avoid current HTML jump target being hidden behind page header

--- a/css/MLS.css
+++ b/css/MLS.css
@@ -15,9 +15,8 @@ body {
 a       { text-decoration: none; color: inherit; }
 a:hover { text-decoration: underline; }
 
-.ltx_page_header {
-  border-bottom-color: #DE1D31; /* "Bouncing ball red" */
-  border-bottom-width: 2px;
+.ltx_title_chapter {
+  padding-top: 2rem;
 }
 
 .ltx_tocentry_subsection { display: none; }
